--- a/Script.conf
+++ b/Script.conf
@@ -30,6 +30,6 @@ http-response https:\/\/book\.haitunwallet\.com\/app\/vip\/status requires-body=
 http-response http:\/\/api\.591master\.com\:8081\/(1.0|3.6.8)\/ui(forum|common)\/(downloadwallpaper|getuser) requires-body=1,script-path=https://raw.githubusercontent.com/yezhigang/Scripts/master/Js/sjyjgj.js, tag=手机硬件管家
 
 # 百度搜索去广告
-http-response ^https?:\/\/.*\.baidu\.com requires-body=1,script-path=(\r\n)User-Agent:.+(\r\n) request-header $1User-Agent: Mozilla/5.0 (iPhone; CPU iPhone OS 13_5 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/13.1.1 Mobile/15E148 Safari/16C50 Quark/604.1 T7/10.3 SearchCraft/2.6.3 (Baidu; P1 8.0.0)$2
+http-request ^https?:\/\/.*\.baidu\.com request-body=1,script-path=(\r\n)User-Agent:.+(\r\n) request-header $1User-Agent: Mozilla/5.0 (iPhone; CPU iPhone OS 13_5 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/13.1.1 Mobile/15E148 Safari/16C50 Quark/604.1 T7/10.3 SearchCraft/2.6.3 (Baidu; P1 8.0.0)$2
 
 hostname = api.m.jd.com, trade-acs.m.taobao.com, api.weibo.cn,mapi.weibo.com,*.uve.weibo.com, mp.weixin.qq.com, r.inews.qq.com, buy.itunes.apple.com, account.wps.cn, vip1.kuwo.cn, book.haitunwallet.com, api.591master.com, *.baidu.com,
