--- a/Script.conf
+++ b/Script.conf
@@ -16,9 +16,6 @@ http-response ^https?://m?api\.weibo\.c(n|om)/2/(statuses/(unread|extend|positiv
 http-request ^https://mp\.weixin\.qq\.com/mp/getappmsgad script-path=https://raw.githubusercontent.com/Choler/Surge/master/Script/WeChat.js, tag=WeChat
 http-response ^https://r\.inews\.qq.com\/get(QQNewsUnreadList|RecommendList) requires-body=1,max-size=-1,script-path=https://raw.githubusercontent.com/Choler/Surge/master/Script/QQNews.js, tag=QQNews
 
-# ZhiYi-N
-http-response https:\/\/buy\.itunes\.apple\.com\/verifyReceipt script-path=https://raw.githubusercontent.com/ZhiYi-N/Loon/master/picsew.js, requires-body=true, timeout=10, tag=Piesew
-
 # yezhigang
 http-response ^https://account.wps.*/api/users/ requires-body=1,script-path=https://raw.githubusercontent.com/yezhigang/Scripts/master/Js/wps.js, tag=WPS
 
@@ -32,6 +29,13 @@ http-response https:\/\/license\.pdfexpert\.com\/api\/.+\/subscription\/(refresh
 http-response https:\/\/book\.haitunwallet\.com\/app\/vip\/status requires-body=1,script-path=https://raw.githubusercontent.com/yezhigang/Scripts/master/Js/htjz.js, tag=海豚记账本
 
 http-response http:\/\/api\.591master\.com\:8081\/(1.0|3.6.8)\/ui(forum|common)\/(downloadwallpaper|getuser) requires-body=1,script-path=https://raw.githubusercontent.com/yezhigang/Scripts/master/Js/sjyjgj.js, tag=手机硬件管家
+
+# buy.itunes.apple.com
+http-response ^https?:\/\/buy\.itunes\.apple\.com\/verifyReceipt requires-body=1,script-path=https://raw.githubusercontent.com/yezhigang/Scripts/master/Js/Gear.js, tag=Gear
+
+http-response https:\/\/buy\.itunes\.apple\.com\/verifyReceipt script-path=https://raw.githubusercontent.com/yezhigang/Scripts/master/Js/picsew.js, requires-body=true, timeout=10, tag=Piesew
+
+http-response ^https:\/\/p.+-buy\.itunes\.apple\.com\/WebObjects\/MZFinance.woa\/wa\/inAppRegrantPurchaseHistory requires-body=1,script-path=https://raw.githubusercontent.com/yezhigang/Scripts/master/Js/cpudasher.js, tag=Document
 
 
 hostname = api.m.jd.com, trade-acs.m.taobao.com, api.weibo.cn,mapi.weibo.com,*.uve.weibo.com, mp.weixin.qq.com, r.inews.qq.com, buy.itunes.apple.com, account.wps.cn, vip1.kuwo.cn, picturebook.ipalfish.com, license.pdfexpert.com, book.haitunwallet.com, api.591master.com, 
