--- a/Script.conf
+++ b/Script.conf
@@ -30,17 +30,16 @@ http-response https:\/\/book\.haitunwallet\.com\/app\/vip\/status requires-body=
 
 http-response http:\/\/api\.591master\.com\:8081\/(1.0|3.6.8)\/ui(forum|common)\/(downloadwallpaper|getuser) requires-body=1,script-path=https://raw.githubusercontent.com/yezhigang/Scripts/master/Js/sjyjgj.js, tag=手机硬件管家
 
-# buy itunes apple com
 
-	
 # ddgksf2013
-http-response ^https:\/\/buy\.itunes\.apple\.com\/verifyReceipt requires-body=1,script-path=https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/receipt.js,tag=RCam
+http-response ^https:\/\/buy\.itunes\.apple\.com\/verifyReceipt requires-body=1,script-path=https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/receipt.js,tag=buy itunes apple com
 
-http-response ^https?:\/\/buy\.itunes\.apple\.com\/verifyReceipt requires-body=1,script-path=https://raw.githubusercontent.com/yezhigang/Scripts/master/Js/gear.js, tag=Gear
+# buy itunes apple com
+#http-response ^https?:\/\/buy\.itunes\.apple\.com\/verifyReceipt requires-body=1,script-path=https://raw.githubusercontent.com/yezhigang/Scripts/master/Js/gear.js, tag=Gear
 
-http-response https:\/\/buy\.itunes\.apple\.com\/verifyReceipt script-path=https://raw.githubusercontent.com/yezhigang/Scripts/master/Js/picsew.js, requires-body=true, timeout=10, tag=Piesew
+#http-response https:\/\/buy\.itunes\.apple\.com\/verifyReceipt script-path=https://raw.githubusercontent.com/yezhigang/Scripts/master/Js/picsew.js, requires-body=true, timeout=10, tag=Piesew
 
-http-response ^https:\/\/p.+-buy\.itunes\.apple\.com\/WebObjects\/MZFinance.woa\/wa\/inAppRegrantPurchaseHistory requires-body=1,script-path=https://raw.githubusercontent.com/yezhigang/Scripts/master/Js/cpudasher.js, tag=CPU Dasher
+#http-response ^https:\/\/p.+-buy\.itunes\.apple\.com\/WebObjects\/MZFinance.woa\/wa\/inAppRegrantPurchaseHistory requires-body=1,script-path=https://raw.githubusercontent.com/yezhigang/Scripts/master/Js/cpudasher.js, tag=CPU Dasher
 
 
 hostname = api.m.jd.com, trade-acs.m.taobao.com, api.weibo.cn,mapi.weibo.com,*.uve.weibo.com, mp.weixin.qq.com, r.inews.qq.com, account.wps.cn, vip1.kuwo.cn, picturebook.ipalfish.com, license.pdfexpert.com, book.haitunwallet.com, api.591master.com, buy.itunes.apple.com, 
