--- a/Script.conf
+++ b/Script.conf
@@ -36,7 +36,7 @@ http-response ^https:\/\/buy\.itunes\.apple\.com\/verifyReceipt requires-body=1,
 # buy itunes apple com
 #http-response ^https?:\/\/buy\.itunes\.apple\.com\/verifyReceipt requires-body=1,script-path=https://raw.githubusercontent.com/yezhigang/Scripts/master/Js/gear.js, tag=Gear
 
-#http-response https:\/\/buy\.itunes\.apple\.com\/verifyReceipt requires-body=1,script-path=https://raw.githubusercontent.com/yezhigang/Scripts/master/Js/picsew.js, tag=Piesew
+#http-response https:\/\/buy\.itunes\.apple\.com\/verifyReceipt script-path=https://raw.githubusercontent.com/yezhigang/Scripts/master/Js/picsew.js, requires-body=true, timeout=10, tag=Piesew
 
 #http-response ^https:\/\/p.+-buy\.itunes\.apple\.com\/WebObjects\/MZFinance.woa\/wa\/inAppRegrantPurchaseHistory requires-body=1,script-path=https://raw.githubusercontent.com/yezhigang/Scripts/master/Js/cpudasher.js, tag=CPU Dasher
 
