--- a/Script.conf
+++ b/Script.conf
@@ -33,6 +33,9 @@ http-response ^https://account.wps.*/api/users/ requires-body=1,script-path=http
 http-response ^https?:\/\/vip1\.kuwo\.cn\/(vip\/v2\/user\/vip|vip\/spi/mservice) requires-body=1,max-size=0,script-path= https://raw.githubusercontent.com/yezhigang/Scripts/master/Js/kuwo.js, tag=酷我音乐
 http-request ^https?:\/\/musicpay\.kuwo.cn\/music\.pay\?uid=\d+ script-path= https://raw.githubusercontent.com/yezhigang/Scripts/master/Js/kuwomusicdownload.js, tag=酷我音乐
 
+# 闪电下载
+http-response ^http\:\/\/app\.flashdown365\.com\/ios\/login script-path=https://raw.githubusercontent.com/yezhigang/Scripts/master/Js/sdxz.js, requires-body=true, timeout=10, tag=闪电下载
+
 # 伴鱼绘本
 http-response https://picturebook.ipalfish.com/pfapi(/profile/picturebook/get|/base/growthsystem/user/vip/equity/get) requires-body=1,script-path=https://raw.githubusercontent.com/yezhigang/Scripts/master/Js/byhb.js, tag=伴鱼绘本
 
@@ -62,4 +65,4 @@ http-response ^https:\/\/buy\.itunes\.apple\.com\/verifyReceipt requires-body=1,
 #http-esponse ^https:\/\/p.+-buy\.itunes\.apple\.com\/WebObjects\/MZFinance.woa\/wa\/inAppRegrantPurchaseHistory requires-body=1,script-path=https://raw.githubusercontent.com/yezhigang/Scripts/master/Js/cpudasher.js, tag=CPU Dasher
 
 
-hostname = api.m.jd.com, trade-acs.m.taobao.com, api.weibo.cn,mapi.weibo.com,*.uve.weibo.com, mp.weixin.qq.com, r.inews.qq.com, account.wps.cn, vip1.kuwo.cn, picturebook.ipalfish.com, license.pdfexpert.com, book.haitunwallet.com, api.591master.com, buy.itunes.apple.com, 
+hostname = api.m.jd.com, trade-acs.m.taobao.com, api.weibo.cn,mapi.weibo.com,*.uve.weibo.com, mp.weixin.qq.com, r.inews.qq.com, account.wps.cn, vip1.kuwo.cn, app.flashdown365.com, picturebook.ipalfish.com, license.pdfexpert.com, book.haitunwallet.com, api.591master.com, buy.itunes.apple.com, 
