--- a/Script.conf
+++ b/Script.conf
@@ -53,7 +53,7 @@ http-response http:\/\/api\.591master\.com\:8081\/(1.0|3.6.8)\/ui(forum|common)\
 
 # ddgksf2013
 # Unlock （剪影.RCam.Picsew.Gear.Geist.VCUS）
-http-response ^https:\/\/buy\.itunes\.apple\.com\/verifyReceipt requires-body=1,script-path=https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/receipt.js, tag=buy itunes apple com
+#http-response ^https:\/\/buy\.itunes\.apple\.com\/verifyReceipt requires-body=1,script-path=https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/receipt.js, tag=buy itunes apple com
 
 # Gear
 #http-response ^https?:\/\/buy\.itunes\.apple\.com\/verifyReceipt requires-body=1,script-path=https://raw.githubusercontent.com/yezhigang/Scripts/master/Js/gear.js, tag=Gear
