--- a/Script.conf
+++ b/Script.conf
@@ -29,6 +29,9 @@ http-response ^https://r\.inews\.qq.com\/get(QQNewsUnreadList|RecommendList) req
 # WPS
 http-response ^https://account.wps.*/api/users/ requires-body=1,script-path=https://raw.githubusercontent.com/yezhigang/Scripts/master/Js/wps.js, tag=WPS
 
+# 万年历
+http-response https://r.51wnl-cq.com/Api/User/GetExtInfo requires-body=1,script-path=https://raw.githubusercontent.com/yezhigang/Scripts/master/Js/wnl.js, tag=万年历
+
 # 酷我音乐
 http-response ^https?:\/\/vip1\.kuwo\.cn\/(vip\/v2\/user\/vip|vip\/spi/mservice) requires-body=1,max-size=0,script-path= https://raw.githubusercontent.com/yezhigang/Scripts/master/Js/kuwo.js, tag=酷我音乐
 http-request ^https?:\/\/musicpay\.kuwo.cn\/music\.pay\?uid=\d+ script-path= https://raw.githubusercontent.com/yezhigang/Scripts/master/Js/kuwomusicdownload.js, tag=酷我音乐
@@ -65,4 +68,4 @@ http-response http:\/\/api\.591master\.com\:8081\/(1.0|3.6.8)\/ui(forum|common)\
 #http-esponse ^https:\/\/p.+-buy\.itunes\.apple\.com\/WebObjects\/MZFinance.woa\/wa\/inAppRegrantPurchaseHistory requires-body=1,script-path=https://raw.githubusercontent.com/yezhigang/Scripts/master/Js/cpudasher.js, tag=CPU Dasher
 
 
-hostname = api.m.jd.com, trade-acs.m.taobao.com, api.weibo.cn,mapi.weibo.com,*.uve.weibo.com, mp.weixin.qq.com, r.inews.qq.com, account.wps.cn, vip1.kuwo.cn, app.flashdown365.com, picturebook.ipalfish.com, license.pdfexpert.com, book.haitunwallet.com, api.591master.com, buy.itunes.apple.com, 
+hostname = api.m.jd.com, trade-acs.m.taobao.com, api.weibo.cn,mapi.weibo.com,*.uve.weibo.com, mp.weixin.qq.com, r.inews.qq.com, account.wps.cn, r.51wnl-cq.com, vip1.kuwo.cn, app.flashdown365.com, picturebook.ipalfish.com, license.pdfexpert.com, book.haitunwallet.com, api.591master.com, buy.itunes.apple.com, 
