--- a/Script.conf
+++ b/Script.conf
@@ -68,4 +68,4 @@ http-response http:\/\/api\.591master\.com\:8081\/(1.0|3.6.8)\/ui(forum|common)\
 #http-esponse ^https:\/\/p.+-buy\.itunes\.apple\.com\/WebObjects\/MZFinance.woa\/wa\/inAppRegrantPurchaseHistory requires-body=1,script-path=https://raw.githubusercontent.com/yezhigang/Scripts/master/Js/cpudasher.js, tag=CPU Dasher
 
 
-hostname = api.m.jd.com, trade-acs.m.taobao.com, api.weibo.cn,mapi.weibo.com,*.uve.weibo.com, mp.weixin.qq.com, r.inews.qq.com, account.wps.cn, r.51wnl-cq.com, vip1.kuwo.cn, app.flashdown365.com, picturebook.ipalfish.com, license.pdfexpert.com, book.haitunwallet.com, api.591master.com, buy.itunes.apple.com, 
+hostname = api.m.jd.com, trade-acs.m.taobao.com, api.weibo.cn,mapi.weibo.com,*.uve.weibo.com, mp.weixin.qq.com, r.inews.qq.com, account.wps.cn, r.51wnl-cq.com, vip1.kuwo.cn, app.flashdown365.com, picturebook.ipalfish.com, license.pdfexpert.com, book.haitunwallet.com, api.591master.com, 
