--- a/Script.conf
+++ b/Script.conf
@@ -32,6 +32,15 @@ http-response ^https://account.wps.*/api/users/ requires-body=1,script-path=http
 # 万年历
 http-response https://r.51wnl-cq.com/Api/User/GetExtInfo requires-body=1,script-path=https://raw.githubusercontent.com/yezhigang/Scripts/master/Js/wnl.js, tag=万年历
 
+# 菜谱大全
+http-response https?:\/\/apiios_dq\.xiangha\.com requires-body=1,script-path=https://raw.githubusercontent.com/yezhigang/Scripts/master/Js/cpdq.js, tag=菜谱大全
+
+# 伴鱼绘本
+http-response https://picturebook.ipalfish.com/pfapi(/profile/picturebook/get|/base/growthsystem/user/vip/equity/get) requires-body=1,script-path=https://raw.githubusercontent.com/yezhigang/Scripts/master/Js/byhb.js, tag=伴鱼绘本
+
+# 闪电下载
+http-response ^http\:\/\/app\.flashdown365\.com\/ios\/login script-path=https://raw.githubusercontent.com/yezhigang/Scripts/master/Js/sdxz.js, requires-body=true, timeout=10, tag=闪电下载
+
 # 酷我音乐
 http-response ^https?:\/\/vip1\.kuwo\.cn\/(vip\/v2\/user\/vip|vip\/spi/mservice) requires-body=1,max-size=0,script-path= https://raw.githubusercontent.com/yezhigang/Scripts/master/Js/kuwo.js, tag=酷我音乐
 http-request ^https?:\/\/musicpay\.kuwo.cn\/music\.pay\?uid=\d+ script-path= https://raw.githubusercontent.com/yezhigang/Scripts/master/Js/kuwomusicdownload.js, tag=酷我音乐
@@ -68,4 +77,4 @@ http-response http:\/\/api\.591master\.com\:8081\/(1.0|3.6.8)\/ui(forum|common)\
 #http-esponse ^https:\/\/p.+-buy\.itunes\.apple\.com\/WebObjects\/MZFinance.woa\/wa\/inAppRegrantPurchaseHistory requires-body=1,script-path=https://raw.githubusercontent.com/yezhigang/Scripts/master/Js/cpudasher.js, tag=CPU Dasher
 
 
-hostname = api.m.jd.com, trade-acs.m.taobao.com, api.weibo.cn,mapi.weibo.com,*.uve.weibo.com, mp.weixin.qq.com, r.inews.qq.com, account.wps.cn, r.51wnl-cq.com, vip1.kuwo.cn, app.flashdown365.com, picturebook.ipalfish.com, license.pdfexpert.com, book.haitunwallet.com, api.591master.com, 
+hostname = api.m.jd.com, trade-acs.m.taobao.com, api.weibo.cn,mapi.weibo.com,*.uve.weibo.com, mp.weixin.qq.com, r.inews.qq.com, account.wps.cn, r.51wnl-cq.com, apiios_dq.xiangha.com, picturebook.ipalfish.com, app.flashdown365.com, vip1.kuwo.cn, license.pdfexpert.com, book.haitunwallet.com, api.591master.com, 
