--- a/Script.conf
+++ b/Script.conf
@@ -34,13 +34,13 @@ http-response ^https://account.wps.*/api/users/ requires-body=1,script-path=http
 http-response https://r.51wnl-cq.com/Api/User/GetExtInfo requires-body=1,script-path=https://raw.githubusercontent.com/yezhigang/Scripts/master/Js/wnl.js, tag=万年历
 
 # 彩云天气
-http-response https?:\/\/biz\.caiyunapp\.com\/(membership_rights|v2\/user) requires-body=1,script-path=https://raw.githubusercontent.com/yezhigang/Scripts/master/Js/caiyun.js
+http-response https?:\/\/biz\.caiyunapp\.com\/(membership_rights|v2\/user) requires-body=1,script-path=https://raw.githubusercontent.com/yezhigang/Scripts/master/Js/caiyun.js tag=彩云天气
 
 # 美图秀秀
-http-response https://api.xiuxiu.meitu.com/v1/user/show.json requires-body=1,script-path=vip_type":0 response-body vip_type":1
+http-response https://api.xiuxiu.meitu.com/v1/user/show.json requires-body=1, vip_type":0 response-body vip_type":1, tag=美图秀秀
 
 # 美颜相机
-http-response https://api.meiyan.com/iap/verify.json requires-body=1,script-path=https://raw.githubusercontent.com/yezhigang/Scripts/master/Js/myxj.js
+http-response https://api.meiyan.com/iap/verify.json requires-body=1,script-path=https://raw.githubusercontent.com/yezhigang/Scripts/master/Js/myxj.js tag=美颜相机
 
 # 菜谱大全
 http-response https?:\/\/apiios_dq\.xiangha\.com requires-body=1,script-path=https://raw.githubusercontent.com/yezhigang/Scripts/master/Js/cpdq.js, tag=菜谱大全
