--- a/Script.conf
+++ b/Script.conf
@@ -25,7 +25,7 @@ http-request ^https://mp\.weixin\.qq\.com/mp/getappmsgad script-path=https://raw
 http-response ^https://r\.inews\.qq.com\/get(QQNewsUnreadList|RecommendList) requires-body=1,max-size=-1,script-path=https://raw.githubusercontent.com/Choler/Surge/master/Script/QQNews.js, tag=QQNews
 
 
-# -------------------
+# －－－－－－－－－－－－
 
 # WPS
 http-response ^https://account.wps.*/api/users/ requires-body=1,script-path=https://raw.githubusercontent.com/yezhigang/Scripts/master/Js/wps.js, tag=WPS
@@ -35,6 +35,9 @@ http-response https://r.51wnl-cq.com/Api/User/GetExtInfo requires-body=1,script-
 
 # 彩云天气
 http-response https?:\/\/biz\.caiyunapp\.com\/(membership_rights|v2\/user) requires-body=1,script-path=https://raw.githubusercontent.com/yezhigang/Scripts/master/Js/caiyun.js, tag=彩云天气
+
+# 美图秀秀
+http-response ^https:\/\/api\.xiuxiu\.meitu\.com\/v1\/user\/show\.json requires-body=1,script-path=https://raw.githubusercontent.com/yezhigang/Scripts/master/Js/mtxx.js, tag=美图秀秀
 
 # 美颜相机
 http-response https://api.meiyan.com/iap/verify.json requires-body=1,script-path=https://raw.githubusercontent.com/yezhigang/Scripts/master/Js/myxj.js, tag=美颜相机
@@ -78,4 +81,4 @@ http-response http:\/\/api\.591master\.com\:8081\/(1.0|3.6.8)\/ui(forum|common)\
 #http-esponse ^https:\/\/p.+-buy\.itunes\.apple\.com\/WebObjects\/MZFinance.woa\/wa\/inAppRegrantPurchaseHistory requires-body=1,script-path=https://raw.githubusercontent.com/yezhigang/Scripts/master/Js/cpudasher.js, tag=CPU Dasher
 
 
-hostname = api.m.jd.com, trade-acs.m.taobao.com, api.weibo.cn,mapi.weibo.com,*.uve.weibo.com, mp.weixin.qq.com, r.inews.qq.com, account.wps.cn, r.51wnl-cq.com, biz.caiyunapp.com, api.meiyan.com, apiios_dq.xiangha.com, picturebook.ipalfish.com, app.flashdown365.com, vip1.kuwo.cn, license.pdfexpert.com, book.haitunwallet.com, api.591master.com, 
+hostname = api.m.jd.com, trade-acs.m.taobao.com, api.weibo.cn,mapi.weibo.com,*.uve.weibo.com, mp.weixin.qq.com, r.inews.qq.com, account.wps.cn, r.51wnl-cq.com, biz.caiyunapp.com, api.xiuxiu.meitu.com, api.meiyan.com, apiios_dq.xiangha.com, picturebook.ipalfish.com, app.flashdown365.com, vip1.kuwo.cn, license.pdfexpert.com, book.haitunwallet.com, api.591master.com, 
