--- a/Script.conf
+++ b/Script.conf
@@ -43,6 +43,9 @@ http-response https://api.meiyan.com/iap/verify.json requires-body=1,script-path
 # 菜谱大全
 http-response https?:\/\/apiios_dq\.xiangha\.com requires-body=1,script-path=https://raw.githubusercontent.com/yezhigang/Scripts/master/Js/cpdq.js, tag=菜谱大全
 
+# 贝瓦儿歌
+http-response http:\/\/passport\.beva\.com\/passport\/v1\/sdk\/getuserinfo requires-body=1,script-path=https://raw.githubusercontent.com/yezhigang/Scripts/master/Js/bweg.js, tag=贝瓦儿歌
+
 # 伴鱼绘本
 http-response https://picturebook.ipalfish.com/pfapi(/profile/picturebook/get|/base/growthsystem/user/vip/equity/get) requires-body=1,script-path=https://raw.githubusercontent.com/yezhigang/Scripts/master/Js/byhb.js, tag=伴鱼绘本
 
@@ -79,4 +82,4 @@ http-response http:\/\/api\.591master\.com\:8081\/(1.0|3.6.8)\/ui(forum|common)\
 #http-esponse ^https:\/\/p.+-buy\.itunes\.apple\.com\/WebObjects\/MZFinance.woa\/wa\/inAppRegrantPurchaseHistory requires-body=1,script-path=https://raw.githubusercontent.com/yezhigang/Scripts/master/Js/cpudasher.js, tag=CPU Dasher
 
 
-hostname = api.m.jd.com, trade-acs.m.taobao.com, api.weibo.cn,mapi.weibo.com,*.uve.weibo.com, mp.weixin.qq.com, r.inews.qq.com, account.wps.cn, r.51wnl-cq.com, biz.caiyunapp.com, api.xiuxiu.meitu.com, api.meiyan.com, apiios_dq.xiangha.com, picturebook.ipalfish.com, app.flashdown365.com, vip1.kuwo.cn, license.pdfexpert.com, book.haitunwallet.com, api.591master.com, 
+hostname = api.m.jd.com, trade-acs.m.taobao.com, api.weibo.cn,mapi.weibo.com,*.uve.weibo.com, mp.weixin.qq.com, r.inews.qq.com, account.wps.cn, r.51wnl-cq.com, biz.caiyunapp.com, api.xiuxiu.meitu.com, api.meiyan.com, apiios_dq.xiangha.com, passport.beva.com, picturebook.ipalfish.com, app.flashdown365.com, vip1.kuwo.cn, license.pdfexpert.com, book.haitunwallet.com, api.591master.com, 
