--- a/Script.conf
+++ b/Script.conf
@@ -16,11 +16,13 @@ http-response ^https?://(sdk|wb)app\.uve\.weibo\.com(/interface/sdk/sdkad.php|/w
 http-response ^https?://m?api\.weibo\.c(n|om)/2/(statuses/(unread|extend|positives/get|(friends|video)(/|_)(mix)?timeline)|stories/(video_stream|home_list)|(groups|fangle)/timeline|profile/statuses|comments/build_comments|photo/recommend_list|service/picfeed|searchall|cardlist|page|!/photos/pic_recommend_status|video/tiny_stream_video_list|photo/info) requires-body=1,max-size=-1,script-path=https://raw.githubusercontent.com/yichahucha/surge/master/wb_ad.js, tag=微博去广告
 
 # WeChat
-http-request ^https://mp\.weixin\.qq\.com/mp/getappmsgad script-path= https://raw.githubusercontent.com/yezhigang/Script/main/WeChat.js, tag=WeChat
+http-request ^https://mp\.weixin\.qq\.com/mp/getappmsgad script-path=https://raw.githubusercontent.com/yezhigang/Script/main/WeChat.js, tag=WeChat
 
 # QQNews
 http-response ^https://r\.inews\.qq.com\/get(QQNewsUnreadList|RecommendList) requires-body=1,max-size=-1,script-path= https://raw.githubusercontent.com/yezhigang/Script/main/QQNews.js, tag=QQNews
 
+# 微信中打开淘宝等被屏蔽链接
+http-response ^https?:\/\/weixin110\.qq\.com\/cgi-bin\/mmspamsupport-bin\/newredirectconfirmcgi requires-body=1,script-path=https://raw.githubusercontent.com/yezhigang/Script/main/weixin110.js, tag=微信打开淘宝链接
 
 # －－－－－－－－－－－－－
 
@@ -81,4 +83,4 @@ http-response http:\/\/api\.591master\.com\:8081\/(1.0|3.6.8)\/ui(forum|common)\
 #http-esponse ^https:\/\/p.+-buy\.itunes\.apple\.com\/WebObjects\/MZFinance.woa\/wa\/inAppRegrantPurchaseHistory requires-body=1,script-path=https://raw.githubusercontent.com/yezhigang/Script/main/cpudasher.js, tag=CPU Dasher
 
 
-hostname = api.m.jd.com, trade-acs.m.taobao.com, api.weibo.cn,mapi.weibo.com,*.uve.weibo.com, mp.weixin.qq.com, r.inews.qq.com, account.wps.cn, r.51wnl-cq.com, biz.caiyunapp.com, api.xiuxiu.meitu.com, api.meiyan.com, apiios_dq.xiangha.com, passport.beva.com, picturebook.ipalfish.com, app.flashdown365.com, vip1.kuwo.cn, license.pdfexpert.com, book.haitunwallet.com, api.591master.com, 
+hostname = api.m.jd.com, trade-acs.m.taobao.com, api.weibo.cn,mapi.weibo.com,*.uve.weibo.com, mp.weixin.qq.com, r.inews.qq.com, weixin110.qq.com, account.wps.cn, r.51wnl-cq.com, biz.caiyunapp.com, api.xiuxiu.meitu.com, api.meiyan.com, apiios_dq.xiangha.com, passport.beva.com, picturebook.ipalfish.com, app.flashdown365.com, vip1.kuwo.cn, license.pdfexpert.com, book.haitunwallet.com, api.591master.com, 
