--- a/Q-Search-js.conf
+++ b/Q-Search-js.conf
@@ -1,4 +1,4 @@
 hostname = duckduckgo.com
 
 
-http-request ^https:\/\/duckduckgo.com\/\?q=.+ script-path=https://raw.githubusercontent.com/zZPiglet/Task/master/Q-Search.js, tag=重写搜索
+http-request ^https:\/\/duckduckgo.com\/\?q=.+ script-path= https://raw.githubusercontent.com/yezhigang/Script/main/Q-Search.js, tag=Q-Search
